--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "better-scroll": "^1.15.2",
     "core-js": "^3.4.3",
     "fastclick": "^1.0.6",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-axios": "^2.1.5",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
@@ -37,7 +40,6 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
     }
